stderr
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ lint: `eslint --config ${CYBER_DOJO_SANDBOX}/.eslintrc.json /**/*.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ lint script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2023-01-27T11_35_45_784Z-debug.log
FAIL ./anagram.test.js
  â— Test suite failed to run

    SyntaxError: /sandbox/anagram.js: Unexpected token, expected ")" (15:40)

      13 |   if (typeof word === 'string' && word.length > 1) {
      14 |     const nextWord = reverseString(word);
    > 15 |     if (!returnArray.contains(nextWord) {
         |                                         ^
      16 |       returnArray.push(nextWord);
      17 |     }
      18 |   }

      at Parser._raise (../etc/jest/node_modules/@babel/parser/src/parser/error.js:60:45)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.491 s
Ran all test suites.
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ test: `jest --coverage`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ test script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2023-01-27T11_35_48_418Z-debug.log
